--- a/src/Sbre/Sbre.fsproj
+++ b/src/Sbre/Sbre.fsproj
@@ -32,7 +32,7 @@
     <DefineConstants>$(DefineConstants);REWRITE_INNER</DefineConstants>
     <DefineConstants>$(DefineConstants);SUBSUME</DefineConstants>
     <DefineConstants>$(DefineConstants);SKIP</DefineConstants>
-    <DefineConstants>$(DefineConstants);SKIP_ACTIVE</DefineConstants>
+<!--    <DefineConstants>$(DefineConstants);SKIP_ACTIVE</DefineConstants>-->
   </PropertyGroup>
   <ItemGroup>
     <InternalsVisibleTo Include="Sbre.Test" />
