--- a/src/Sbre.Test/Sbre.Test.fsproj
+++ b/src/Sbre.Test/Sbre.Test.fsproj
@@ -52,4 +52,8 @@
       <ProjectReference Include="..\Sbre\Sbre.fsproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="data\" />
+    </ItemGroup>
+
 </Project>
