Added comprehensive benchmarks.

--- a/src/Sbre.Benchmarks/Sbre.Benchmarks.fsproj
+++ b/src/Sbre.Benchmarks/Sbre.Benchmarks.fsproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <Compile Include="Jobs.fs" />
+        <Compile Include="OptimizationsComprehensive.fs" />
         <Compile Include="ParagraphOuter.fs" />
         <Compile Include="ParagraphInner.fs" />
         <Compile Include="ParagraphFull.fs" />
