--- a/src/Sbre.Benchmarks/Sbre.Benchmarks.fsproj
+++ b/src/Sbre.Benchmarks/Sbre.Benchmarks.fsproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="Compile.fs" />
         <Compile Include="Jobs.fs" />
         <Compile Include="OptimizationsComprehensive.fs" />
         <Compile Include="ParagraphOuter.fs" />
